--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
     <!-- custom css -->
     <link rel="stylesheet" href="assets/css/style.css" />
     <!-- fonts -->
-    <link rel="stylesheet" href="./assets/fonts/fonts/stylsheet.css" />
+    <link rel="stylesheet" href="./assets/fonts/stylesheet.css" />
   </head>
   <body>
     <section>
-      <div class="container">
+      <div class="container" id="container">
         <div class="cost">
           <div class="cost-description">
             <h2>
@@ -26,7 +26,7 @@
                 <h4>Number of bedrooms</h4>
               </div>
               <div class="filter">
-                <select name="" id="">
+                <select name="" id="" required>
                   <option value="" disabled selected>Please Select</option>
                   <option value="1 bedroom">1 bedroom</option>
                   <option value="2 bedroom">2 bedroom</option>
@@ -67,7 +67,31 @@
             </div>
             <div class="detail">
               <div class="heading">
-                <h4>Include SEG</h4>
+                <h4>
+                  Include SEG
+                  <svg
+                    width="16"
+                    height="16"
+                    viewBox="0 0 16 16"
+                    fill="none"
+                    xmlns="http://www.w3.org/2000/svg"
+                  >
+                    <g clip-path="url(#clip0_1_196)">
+                      <path
+                        d="M6.05992 6.00001C6.21665 5.55446 6.52602 5.17875 6.93322 4.93943C7.34042 4.70012 7.81918 4.61264 8.2847 4.69248C8.75022 4.77233 9.17246 5.01436 9.47664 5.3757C9.78081 5.73703 9.94729 6.19436 9.94659 6.66668C9.94659 8.00001 7.94659 8.66668 7.94659 8.66668M7.99992 11.3333H8.00659M14.6666 8.00001C14.6666 11.6819 11.6818 14.6667 7.99992 14.6667C4.31802 14.6667 1.33325 11.6819 1.33325 8.00001C1.33325 4.31811 4.31802 1.33334 7.99992 1.33334C11.6818 1.33334 14.6666 4.31811 14.6666 8.00001Z"
+                        stroke="#BDBDBD"
+                        stroke-width="1.33333"
+                        stroke-linecap="round"
+                        stroke-linejoin="round"
+                      />
+                    </g>
+                    <defs>
+                      <clipPath id="clip0_1_196">
+                        <rect width="16" height="16" fill="white" />
+                      </clipPath>
+                    </defs>
+                  </svg>
+                </h4>
               </div>
               <div class="filter">
                 <select name="" id="">
@@ -91,8 +115,301 @@
               </div>
             </div>
             <div class="detail">
-              <button class="btn">
+              <button class="btn org-btn" id="calculate">
                 Calculate
+                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512">
+                  <path
+                    fill="white"
+                    d="M438.6 278.6c12.5-12.5 12.5-32.8 0-45.3l-160-160c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3L338.8 224 32 224c-17.7 0-32 14.3-32 32s14.3 32 32 32l306.7 0L233.4 393.4c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0l160-160z"
+                  />
+                </svg>
+              </button>
+            </div>
+          </div>
+
+          <div class="summary-section">
+            <div id="blur" class="summary-container blur-effect">
+              <div class="summary-heading">
+                <h3>Your results summary</h3>
+              </div>
+              <div class="summary-cost">
+                <div class="result-cost">
+                  <div class="result-cost--desc">
+                    <svg
+                      width="21"
+                      height="20"
+                      viewBox="0 0 21 20"
+                      fill="none"
+                      xmlns="http://www.w3.org/2000/svg"
+                    >
+                      <path
+                        d="M5.33333 16.7393H7.50858C7.79219 16.7393 8.07407 16.773 8.34901 16.8405L10.6474 17.3991C11.1461 17.5206 11.6656 17.5324 12.1696 17.4345L14.7108 16.9401C15.3821 16.8093 15.9997 16.4879 16.4836 16.0171L18.2816 14.2681C18.795 13.7695 18.795 12.9604 18.2816 12.4609C17.8193 12.0112 17.0873 11.9606 16.5643 12.3419L14.4688 13.8707C14.1687 14.0901 13.8036 14.2082 13.428 14.2082H11.4046L12.6926 14.2081C13.4185 14.2081 14.0065 13.6361 14.0065 12.9299V12.6743C14.0065 12.0879 13.5963 11.5766 13.0117 11.4349L11.0238 10.9514C10.7003 10.873 10.369 10.8333 10.036 10.8333C9.23194 10.8333 7.77658 11.499 7.77658 11.499L5.33333 12.5207M2 12.1667L2 17C2 17.4667 2 17.7001 2.09083 17.8783C2.17072 18.0351 2.29821 18.1626 2.45501 18.2425C2.63327 18.3333 2.86662 18.3333 3.33333 18.3333H4C4.46671 18.3333 4.70007 18.3333 4.87833 18.2425C5.03513 18.1626 5.16261 18.0351 5.24251 17.8783C5.33333 17.7001 5.33333 17.4667 5.33333 17V12.1667C5.33333 11.7 5.33333 11.4666 5.24251 11.2883C5.16261 11.1315 5.03513 11.0041 4.87833 10.9242C4.70007 10.8333 4.46671 10.8333 4 10.8333H3.33333C2.86662 10.8333 2.63327 10.8333 2.45501 10.9242C2.29821 11.0041 2.17072 11.1315 2.09083 11.2883C2 11.4666 2 11.7 2 12.1667ZM14.6595 2.99354C14.1621 1.95282 13.0155 1.40148 11.9004 1.93364C10.7852 2.46579 10.3102 3.72781 10.777 4.83568C11.0656 5.52038 11.8923 6.85 12.4817 7.76585C12.6995 8.10425 12.8084 8.27345 12.9675 8.37244C13.1039 8.45734 13.2747 8.5031 13.4353 8.49779C13.6226 8.4916 13.8015 8.39952 14.1593 8.21535C15.1277 7.71692 16.5085 6.97879 17.1007 6.5301C18.059 5.80409 18.2963 4.46964 17.5789 3.45519C16.8615 2.44075 15.6105 2.34093 14.6595 2.99354Z"
+                        stroke="#207E84"
+                        stroke-width="1.66667"
+                        stroke-linecap="round"
+                        stroke-linejoin="round"
+                      />
+                    </svg>
+                    <h5>Total savings</h5>
+                  </div>
+                  <div class="result-cost--price">
+                    <svg
+                      xmlns="http://www.w3.org/2000/svg"
+                      viewBox="0 0 320 512"
+                    >
+                      <!--!Font Awesome Free 6.6.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.-->
+                      <path
+                        d="M112 160.4c0-35.5 28.8-64.4 64.4-64.4c6.9 0 13.8 1.1 20.4 3.3l81.2 27.1c16.8 5.6 34.9-3.5 40.5-20.2s-3.5-34.9-20.2-40.5L217 38.6c-13.1-4.4-26.8-6.6-40.6-6.6C105.5 32 48 89.5 48 160.4L48 224l-16 0c-17.7 0-32 14.3-32 32s14.3 32 32 32l16 0 0 44.5c0 17.4-4.7 34.5-13.7 49.4L4.6 431.5c-5.9 9.9-6.1 22.2-.4 32.2S20.5 480 32 480l256 0c17.7 0 32-14.3 32-32s-14.3-32-32-32L88.5 416l.7-1.1C104.1 390 112 361.5 112 332.5l0-44.5 112 0c17.7 0 32-14.3 32-32s-14.3-32-32-32l-112 0 0-63.6z"
+                      />
+                    </svg>
+                    <h5>303</h5>
+                  </div>
+                </div>
+                <div class="result-cost">
+                  <div class="result-cost--desc">
+                    <svg
+                      width="21"
+                      height="20"
+                      viewBox="0 0 21 20"
+                      fill="none"
+                      xmlns="http://www.w3.org/2000/svg"
+                    >
+                      <path
+                        d="M5.49996 9.16668V12.5M15.5 7.50001V10.8333M14.6666 3.33334C16.7072 3.33334 17.8109 3.64564 18.3601 3.88788C18.4332 3.92014 18.4698 3.93627 18.5753 4.03699C18.6386 4.09736 18.754 4.2745 18.7837 4.35675C18.8333 4.49396 18.8333 4.56896 18.8333 4.71896V13.676C18.8333 14.4333 18.8333 14.8119 18.7197 15.0066C18.6042 15.2045 18.4928 15.2966 18.2766 15.3727C18.064 15.4475 17.6349 15.365 16.7768 15.2001C16.1761 15.0847 15.4637 15 14.6666 15C12.1666 15 9.66663 16.6667 6.33329 16.6667C4.2927 16.6667 3.18901 16.3544 2.63986 16.1121C2.56673 16.0799 2.53016 16.0638 2.42463 15.963C2.36136 15.9027 2.24589 15.7255 2.21618 15.6433C2.16663 15.5061 2.16663 15.4311 2.16663 15.2811L2.16663 6.32405C2.16663 5.56675 2.16663 5.1881 2.28019 4.99346C2.39571 4.79548 2.50712 4.70344 2.72334 4.62735C2.93591 4.55255 3.36499 4.635 4.22315 4.79988C4.82381 4.91529 5.53619 5.00001 6.33329 5.00001C8.83329 5.00001 11.3333 3.33334 14.6666 3.33334ZM12.5833 10C12.5833 11.1506 11.6506 12.0833 10.5 12.0833C9.34937 12.0833 8.41663 11.1506 8.41663 10C8.41663 8.84942 9.34937 7.91668 10.5 7.91668C11.6506 7.91668 12.5833 8.84942 12.5833 10Z"
+                        stroke="#207E84"
+                        stroke-width="1.66667"
+                        stroke-linecap="round"
+                        stroke-linejoin="round"
+                      />
+                    </svg>
+
+                    <h5>Installation cost</h5>
+                  </div>
+                  <div class="result-cost--price">
+                    <svg
+                      xmlns="http://www.w3.org/2000/svg"
+                      viewBox="0 0 320 512"
+                    >
+                      <!--!Font Awesome Free 6.6.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.-->
+                      <path
+                        d="M112 160.4c0-35.5 28.8-64.4 64.4-64.4c6.9 0 13.8 1.1 20.4 3.3l81.2 27.1c16.8 5.6 34.9-3.5 40.5-20.2s-3.5-34.9-20.2-40.5L217 38.6c-13.1-4.4-26.8-6.6-40.6-6.6C105.5 32 48 89.5 48 160.4L48 224l-16 0c-17.7 0-32 14.3-32 32s14.3 32 32 32l16 0 0 44.5c0 17.4-4.7 34.5-13.7 49.4L4.6 431.5c-5.9 9.9-6.1 22.2-.4 32.2S20.5 480 32 480l256 0c17.7 0 32-14.3 32-32s-14.3-32-32-32L88.5 416l.7-1.1C104.1 390 112 361.5 112 332.5l0-44.5 112 0c17.7 0 32-14.3 32-32s-14.3-32-32-32l-112 0 0-63.6z"
+                      />
+                    </svg>
+                    <h5>7,500</h5>
+                  </div>
+                </div>
+                <div class="result-cost">
+                  <div class="result-cost--desc">
+                    <svg
+                      width="21"
+                      height="20"
+                      viewBox="0 0 21 20"
+                      fill="none"
+                      xmlns="http://www.w3.org/2000/svg"
+                    >
+                      <path
+                        d="M17.6666 8.33332H2.66663M17.6666 10.4167V7.33332C17.6666 5.93319 17.6666 5.23313 17.3941 4.69835C17.1545 4.22794 16.772 3.84549 16.3016 3.60581C15.7668 3.33332 15.0668 3.33332 13.6666 3.33332H6.66663C5.26649 3.33332 4.56643 3.33332 4.03165 3.60581C3.56124 3.84549 3.17879 4.22794 2.93911 4.69835C2.66663 5.23313 2.66663 5.93319 2.66663 7.33332V14.3333C2.66663 15.7335 2.66663 16.4335 2.93911 16.9683C3.17879 17.4387 3.56124 17.8212 4.03165 18.0608C4.56643 18.3333 5.26649 18.3333 6.66663 18.3333H10.1666M13.5 1.66666V4.99999M6.83329 1.66666V4.99999M12.25 15.8333L13.9166 17.5L17.6666 13.75"
+                        stroke="#207E84"
+                        stroke-width="1.66667"
+                        stroke-linecap="round"
+                        stroke-linejoin="round"
+                      />
+                    </svg>
+
+                    <h5>Payback</h5>
+                  </div>
+                  <div class="result-cost--price">
+                    <h5>11 years</h5>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="install mini-container" id="install">
+            <h3>
+              Interested in how much it will cost to install solar panels, and
+              how much you could save?
+            </h3>
+          </div>
+
+          <div class="saving-section">
+            <div class="info">
+              <h4>How we calculate your savings</h4>
+            </div>
+            <div class="drop-down_icon" id="activate">
+              <svg
+                width="28"
+                height="28"
+                viewBox="0 0 28 28"
+                fill="none"
+                xmlns="http://www.w3.org/2000/svg"
+              >
+                <path
+                  d="M21 10.5L14 17.5L7 10.5"
+                  stroke="#222222"
+                  stroke-width="2.33333"
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                />
+              </svg>
+            </div>
+          </div>
+
+          <!-- Calculate saving section -->
+          <div class="calculate-saving-section" id="active">
+            <div class="payback-section savings">
+              <div class="heading">
+                <h4>Payback</h4>
+              </div>
+              <div class="flex">
+                <p>Payback period</p>
+                <p>11 years</p>
+              </div>
+            </div>
+            <div class="savings-section savings">
+              <div class="heading">
+                <h4>Savings</h4>
+              </div>
+              <div class="saving-section-desc">
+                <div class="flex">
+                  <p>Annual Energy savings </p>
+                  <p>£372</p>
+                </div>
+                <div class="flex">
+                  <p>Annual SEG payment</p>
+                  <p>£303</p>
+                </div>
+                <div class="flex">
+                  <p>Total annual savings</p>
+                  <p>£675</p>
+                </div>
+              </div>
+            </div>
+            <div class="total-energy-consuption savings">
+              <div class="heading">
+                <h4>Total Energy Consuption</h4>
+              </div>
+              <div class="flex">
+                <p>Energy rate</p>
+                <p>£0.26</p>
+              </div>
+              <div class="flex">
+                <p>Estimated annual energy consumption</p>
+                <p>3350 kWh</p>
+              </div>
+            </div>
+            <div class="system-requirments-system savings">
+              <div class="heading">
+                <h4>System requirements</h4>
+              </div>
+              <div class="flex">
+                <p>Required system size</p>
+                <p>4.5 kWp</p>
+              </div>
+              <div class="flex">
+                <p>Number of panels</p>
+                <p>12</p>
+              </div>
+              <div class="flex">
+                <p>Initial cost + installation</p>
+                <p>£7,100</p>
+              </div>
+              <div class="flex">
+                <p>Solar battery cost</p>
+                <p>£0</p>
+              </div>
+              <div class="flex">
+                <p>Panel power (W)</p>
+                <p>£0</p>
+              </div>
+              <div class="flex more-info">
+                <p>
+                  More info<svg
+                    width="28"
+                    height="28"
+                    viewBox="0 0 28 28"
+                    fill="none"
+                    xmlns="http://www.w3.org/2000/svg"
+                  >
+                    <path
+                      d="M21 10.5L14 17.5L7 10.5"
+                      stroke="#222222"
+                      stroke-width="2.33333"
+                      stroke-linecap="round"
+                      stroke-linejoin="round"
+                    />
+                  </svg>
+                </p>
+              </div>
+            </div>
+            <div class="solar-energy-production savings">
+              <div class="heading">
+                <h4>Solar energy production</h4>
+              </div>
+              <div class="flex">
+                <p>Regional solar energy production</p>
+                <p>4,383 kWh</p>
+              </div>
+              <div class="intro">
+                <p>
+                  Lorem ipsum dolor sit amet consectetur. Massa morbi aliquam
+                  duis eu duis quis non. Ac massa porttitor orci sit elit eu in
+                  quisque. Sed felis mi lectus vulputate est integer non feugiat
+                  etiam. Fringilla sed vestibulum quam massa non habitasse sit
+                  sed sit. Facilisis non odio dui vitae sit condimentum amet sed
+                  lobortis. Odio eget urna id nunc ullamcorper sit ut eu.
+                  Elementum non amet est odio. At leo tempor cras velit lacinia
+                  consectetur.
+                </p>
+              </div>
+            </div>
+            <div class="solar-energy-consuption savings">
+              <div class="heading">
+                <h4>Solar energy consumption</h4>
+              </div>
+              <div class="flex">
+                <p>Annual solar energy consumption</p>
+                <p>2,937 kWh</p>
+              </div>
+              <div class="flex">
+                <p>
+                  Solar energy consumption as a percentage of solar production
+                </p>
+                <p>1,446 kWh</p>
+              </div>
+            </div>
+            <div class="seg-energy-production savings">
+              <div class="heading">
+                <h4>SEG energy Production</h4>
+              </div>
+              <div class="flex">
+                <p>SEG rate</p>
+                <p>£0.10</p>
+              </div>
+              <div class="flex">
+                <p>Annual SEG energy</p>
+                <p>2,937 kWh</p>
+              </div>
+            </div>
+          </div>
+
+          <!--compare section-->
+          <div class="compare-section">
+            <div class="compare-section--left deco">
+              <p>
+                The data used to power this calculator is sourced from various
+                solar companies and industry bodies, including the UK
+                government, the Energy Saving Trust and Ofgem. Please note that
+                costs are estimated and based on a UK average, and should not be
+                taken as the exact price you would pay. If you’d like to get an
+                accurate quote for solar panels, then you can use this form to
+                get an estimate from one of our trusted partners.
+              </p>
+            </div>
+            <div class="compare-section--right deco">
+              <h5>Start comparing</h5>
+              <button class="btn black-btn">
+                Get free quotes
                 <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512">
                   <path
                     fill="white"
@@ -105,5 +422,7 @@
         </div>
       </div>
     </section>
+
+    <script src="./assets/js/script.js"></script>
   </body>
 </html>
