--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
             </div>
           </div>
 
-          <div class="summary-section">
+          <div class="summary-section border" id="summary">
             <div id="blur" class="summary-container blur-effect">
               <div class="summary-heading">
                 <h3>Your results summary</h3>
@@ -232,27 +232,27 @@
             </h3>
           </div>
 
-          <div class="saving-section">
-            <div class="info">
+          <div class="saving-section" id="activate">
+            <button class="info">
               <h4>How we calculate your savings</h4>
-            </div>
-            <div class="drop-down_icon" id="activate">
-              <svg
-                width="28"
-                height="28"
-                viewBox="0 0 28 28"
-                fill="none"
-                xmlns="http://www.w3.org/2000/svg"
-              >
-                <path
-                  d="M21 10.5L14 17.5L7 10.5"
-                  stroke="#222222"
-                  stroke-width="2.33333"
-                  stroke-linecap="round"
-                  stroke-linejoin="round"
-                />
-              </svg>
-            </div>
+              <div class="drop-down_icon" id="actives">
+                <svg
+                  width="28"
+                  height="28"
+                  viewBox="0 0 28 28"
+                  fill="none"
+                  xmlns="http://www.w3.org/2000/svg"
+                >
+                  <path
+                    d="M21 10.5L14 17.5L7 10.5"
+                    stroke="#222222"
+                    stroke-width="2.33333"
+                    stroke-linecap="round"
+                    stroke-linejoin="round"
+                  />
+                </svg>
+              </div>
+            </button>
           </div>
 
           <!-- Calculate saving section -->
@@ -394,8 +394,8 @@
           </div>
 
           <!--compare section-->
-          <div class="compare-section">
-            <div class="compare-section--left deco">
+          <div class="compare-section" id="display-compare-section">
+            <div class="compare-section--left deco" id="compare-left">
               <p>
                 The data used to power this calculator is sourced from various
                 solar companies and industry bodies, including the UK
